# metricflow-mcp

./: .gitignore  Dockerfile  README.md  RUNNING_GUIDE.md  copy_csv_to_postgres.py  demo_postgres.py  docker-compose.yml  env.example  import_local_csv.py  import_uber.py  pyproject.toml  vanna_flask_app.py  vanna_local_demo.py
.taskmaster/: state.json
.taskmaster/docs/: Metricflow_Products_Requirements.docx.md  mcp_server_spec.md  prd.txt
.taskmaster/tasks/: tasks.json
src/: csv_importer.py  kaggle_downloader.py  models.py  server.py
tests/: README.md  docker_test.py  interactive_test.py  simple_test.py  test_client.py  test_csv_columns.py  test_postgres_data_loading.py
